Lower z-index on .wcp-article-title to fix KAWO menu conflict #QF

--- a/wechat-preview.css
+++ b/wechat-preview.css
@@ -393,7 +393,7 @@
 	left: 0;
 	padding: 0 10px;
 	position: absolute;
-	z-index: 15;
+	z-index: 5;
 	bottom: 10px;
 	padding-bottom: 0 !important;
 }
@@ -431,7 +431,7 @@
 	margin: 0px 0.5px;
 	border-top: 1px solid #F1F1F1;
 	position: relative;
-    z-index: 10;
+    z-index: 2;
 
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
@@ -448,7 +448,7 @@
 .wcp-normal .wcp-article-title,
 .wcp-top-to-wcp-normal .wcp-article-title {
 	background: transparent;
-	z-index: 15;
+	z-index: 5;
 
 	-webkit-flex: 1 1 auto;
 	-ms-flex: 1 1 auto;
@@ -613,8 +613,8 @@
 }
 
 @keyframes absoluteDown {
-	from	{ position: absolute; bottom: 0; left: 0; z-index: 15; padding: 0 10px; transform: translateY(-100px); }
-	to		{ position: absolute; bottom: 0; left: 0; z-index: 15; padding: 0 10px; transform: translateY(-10px); }
+	from	{ position: absolute; bottom: 0; left: 0; z-index: 5; padding: 0 10px; transform: translateY(-100px); }
+	to		{ position: absolute; bottom: 0; left: 0; z-index: 5; padding: 0 10px; transform: translateY(-10px); }
 }
 
 @-webkit-keyframes snapToRow {
